fixed css issues: padding of tooltip and z-index of modals

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -298,6 +298,7 @@ input[type="button"] {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.05);
+    z-index: 20;
 }
 
 /* MODAL */
@@ -439,7 +440,7 @@ h3 {
     color: #fff;
     text-align: center;
     border-radius: 6px;
-    padding: 5px 0;
+    padding: 7px;
     position: absolute;
     z-index: 1;
     bottom: 125%;
